--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,12 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(90deg, rgba(255,255,255,0.65) 1%, rgba(255,255,255,0.65) 100%),url(https://img.freepik.com/premium-vector/abstract-connecting-dots-lines_41981-773.jpg?w=1800);
+  background-image: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0.8) 1%,
+      rgba(255, 255, 255, 0.8) 100%
+    ),
+    url(https://img.freepik.com/premium-vector/abstract-connecting-dots-lines_41981-773.jpg?w=1800);
   background-repeat: repeat-y;
   background-size: contain;
   font-family: "Poppins", sans-serif;
@@ -23,20 +28,15 @@ body {
   max-width: 1140px;
 }
 header {
-  color: #fff;
-  text-align: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url(/resources/header.webp);
-  background-position: center 35%;
-  height: 15rem;
+  background-size: cover;
+  height: 29rem;
 }
 
 .header-container {
-  width: 80%;
   margin: auto;
   display: flex;
-  align-items: center;
-  height: 80%;
 }
 
 .contact-info {
@@ -63,12 +63,6 @@ header {
 .contact-info a {
   text-decoration: none;
   color: inherit;
-}
-
-.logo-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .logo img {
@@ -107,7 +101,7 @@ nav li {
   margin: 0.8rem 1.1rem;
   cursor: pointer;
 }
-nav a {
+nav > ul > li > a {
   padding: 0.8rem 1.1rem;
   text-decoration: none;
   text-transform: uppercase;
@@ -115,13 +109,48 @@ nav a {
   font-size: 0.9rem;
   letter-spacing: 1px;
 }
-nav a:hover {
+nav > ul > li > a:hover {
   background-color: #dddddd;
   border-bottom: 3px solid #005896;
 }
 
 .nav-active {
   border-bottom: 3px solid #005896;
+}
+.on-hover-menu {
+  display: flex;
+  text-align: left;
+  height: auto;
+  line-height: 2vh;
+  margin-left: 0.5rem;
+}
+nav ul li ul {
+  display: none;
+}
+nav ul li:hover ul {
+  display: block;
+  position: absolute;
+  z-index: 1;
+  width: 15%;
+  margin-top: 0.9rem;
+  background-color: #f8f8f8;
+  animation: fade-down 0.35s;
+  border-bottom-right-radius: 15%;
+  box-shadow: 0px 12px 30px #0000001a;
+}
+nav ul li ul a {
+  text-decoration: none;
+  color: #333;
+}
+nav ul li ul a li {
+  padding: 0.2rem;
+  border-left: 4px solid #f8f8f8;
+}
+nav ul li ul li:hover {
+  border-left: 4px solid #005896;
+}
+.hamburger i {
+  color: #fff;
 }
 
 /*----------------------------------------------------------------*/
@@ -173,7 +202,7 @@ nav a:hover {
   width: 48%;
   margin: 0;
 }
-.choose-description > div >img {
+.choose-description > div > img {
   border-radius: 15px;
   box-shadow: 0px 12px 30px #0000001a;
 }
@@ -221,13 +250,14 @@ nav a:hover {
 }
 .offer-box {
   background-color: #fff;
-  margin: 3rem;
-  margin-left: auto;
+  margin: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   box-shadow: 0px 12px 30px #0000001a;
   border-radius: 36px;
   margin-right: auto;
   padding: 2rem;
-  width: 75%;
+  width: 70%;
 }
 .splide__pagination__page {
   background: #005896 !important;
@@ -243,7 +273,7 @@ nav a:hover {
   display: flex;
 }
 .left-row {
-  width: 48%;
+  width: 58%;
 }
 .left-row h4 {
   font-size: 1.2rem;
@@ -263,10 +293,10 @@ nav a:hover {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.4rem;
-  width: 80%;
+  width: 90%;
 }
 .right-row {
-  width: 48%;
+  width: 38%;
   align-self: flex-end;
   text-align: right;
 }
@@ -284,7 +314,7 @@ nav a:hover {
   font-weight: 500;
   padding: 0.7em 1.4em 0.7em 1.1em;
   color: white;
-  background: #FF6C22;
+  background: #ff6c22;
   border: none;
   letter-spacing: 0.05em;
   border-radius: 20em;
@@ -293,7 +323,7 @@ nav a:hover {
 }
 
 .button:hover {
-  box-shadow: 0 0.5em 1.5em -0.5em #FF6C22;
+  box-shadow: 0 0.5em 1.5em -0.5em #ff6c22;
   transform: scale(1.1);
 }
 /*----------------------------------------------------------------*/
@@ -397,7 +427,6 @@ nav a:hover {
 
 #calculator-online {
   margin-top: 3rem;
-
 }
 
 /*----------------------------------------------------------------*/
@@ -405,18 +434,8 @@ nav a:hover {
 /* Footer */
 
 /*----------------------------------------------------------------*/
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
+footer {
   background: #0362ab;
-  color: white;
-  font-weight: 500;
-  gap: 0.2rem;
-  padding: 1rem;
-  padding-top: 1.7rem;
-  padding-bottom: 0.7rem;
   background-image: linear-gradient(
     180deg,
     #005896 0,
@@ -424,29 +443,50 @@ nav a:hover {
     rgba(255, 255, 255, 0.034) 8rem
   );
 }
-.footer-left a {
-  text-decoration: none;
-  color: #ecf000;
+.footer {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  padding: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .footer img {
   width: 8rem;
 }
 .footer-right {
-  background-color: #fff;
-  border-radius: 50%;
+  background-color: #ffffff;
 }
-.footer-left {
-  text-align: end;
-}
-
 .footer p {
   margin-top: 1rem;
-  font-size: 0.8rem;
+  font-size: 0.95rem;
 }
-.footer-left img {
-  width: 30px;
+.footer-last {
+  background-color: #33333323;
+}
+.footer-copy {
+  margin: auto;
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: end;
+  line-height: 2rem;
+}
+.footer-copy img {
+  width: 23px;
   margin-left: 5px;
   margin-right: 5px;
+}
+.footer-copy a {
+  text-decoration: none;
+  color: #ecf000;
+  font-size: 0.7rem;
+}
+.footer-copy >span , .footer-copy > p {
+  font-size: 0.7rem;
 }
 .partner-back {
   display: none;
@@ -546,7 +586,7 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 35%;
+  width: 40%;
 }
 .address {
   display: flex;
@@ -667,7 +707,7 @@ h1 {
 }
 .what-we-do {
   animation: fade-left 0.75s;
-  background-color: #Fff;
+  background-color: #fff;
   box-shadow: 0px 12px 30px #0000001a;
   border-radius: 36px;
 }
@@ -833,10 +873,66 @@ h1 {
   width: 50%;
 }
 .car-right-site img {
- width: 100%;
- border-radius: 25%;
+  width: 100%;
+  border-radius: 25%;
+}
+.tools-nav {
+  text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  text-align: start;
+  justify-content: space-between;
+}
+.tools-nav > ul {
+  list-style-type: none;
 }
 
+.tools-nav > ul > li {
+  padding: 1.3rem;
+  padding-right: 0.5rem;
+}
+.tools-nav ul > li >a {
+  text-decoration: none;
+  color: #414957;
+  font-weight: 600;
+}
+.tools-nav ul > li >a:hover {
+  text-decoration: underline;
+}
+.partner-description > h3 {
+  margin-bottom: 1rem;
+  font-size: 1.3rem;
+}
+.partner-description > ol > li {
+  padding: 1rem;
+}
+.form-container > form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+}
+.form-container >form > h3 {
+  margin: 1rem;
+  font-size: 1.2rem;
+  color: #333;
+}
+.tools-input {
+  color: rgb(0, 0, 0);
+  font-size: 1rem;
+  line-height: 1.2rem;
+  background-color: #fff;
+  padding: 0.7rem;
+  outline: 0;
+  box-sizing: border-box;
+  border: 2px solid #33333336;
+  &:focus {
+    border: 2px solid #333;
+  }
+}
+.wrongVin {
+  color: red;
+}
 /*----------------------------------------------------------------*/
 
 /* Animation & Keyframes & Others */
@@ -929,6 +1025,16 @@ h1 {
 @keyframes fade-up {
   0% {
     transform: translateY(-50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes fade-down {
+  0% {
+    transform: translateY(50px);
     opacity: 0;
   }
   100% {
@@ -1090,9 +1196,7 @@ h1 {
     max-width: 100%;
     padding: 0;
   }
-  #splide01 {
-    max-width: 100% !important;
-  }
+
   .offer-description p {
     padding: 1rem;
   }
@@ -1180,10 +1284,6 @@ h1 {
     text-decoration: none;
   }
 
-  .menuItem:hover {
-    text-decoration: underline;
-  }
-
   .hamburger {
     position: fixed;
     z-index: 100;
@@ -1264,8 +1364,8 @@ h1 {
     display: none;
   }
 
-  .footer-center-right {
-    display: none;
+  .footer-copy {
+    padding: 0rem 2rem;
   }
 
   .about-container {
