--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
     <div class="footer container">
       <div class="footer-right">
         <img src="/resources/logo.webp" alt="logo" />
@@ -16,7 +16,7 @@
     </div>
     <div class="footer-last">
     <div class="footer-copy container">
-      <span>&copy; 2023
+      <span>&copy; <span id="year"></span>
         <a href="/">ZZ-Consulting</a>.<br>Wszystkie prawa
         zastrzeżone.</span>
       <p>
@@ -27,5 +27,56 @@
       </p>
     </div>
   </div>
+  </footer> -->
+  <footer>
+    <div class="footer-container container">
+      <div class="footer-column footer-wide">
+          <div class="footer-logo">
+            <a href="/"><img src="/resources/logo.webp" alt="logo" width="120px"></a>
+          </div>
+          <div class="footer-description">
+              <p>Renomowane ubezpieczenia<br> kompleksowe rozwiązania<br> indywidualne podejście</p>
+          </div>
+      </div>
+      <div class="footer-column">
+        <ul><h3>Linki</h3>
+          <li><a href="/">Strona główna</a></li>
+          <li><a href="/druki">Druki</a></li>
+          <li><a href="/partnerzy">Partnerzy</a></li>
+        </ul>
+      </div>
+      <div class="footer-column footer-mobile">
+        <ul><h3>Narzędzia</h3>
+          <li><a href="/narzedzia/wypowiedzenie-oc">Wypowiedzenie OC</a></li>
+          <li><a href="/narzedzia/powiadomienie-o-zbyciu">Zbycie pojazdu</a></li>
+          <li><a href="/narzedzia/powiadomienie-o-wyrejestrowaniu">Wyrejestrowanie pojazdu</a></li>
+          <li><a href="/narzedzia/kalkulator-kary">Kalkulator kary</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <ul><h3>O nas</h3>
+          <li><a href="/o-nas">Poznaj nas</a></li>
+          <li><a href="/kontakt">Kontakt</a></li>
+        </ul>
+      </div>
+      <div class="footer-column footer-contact footer-mobile">
+        <ul><h3>Odwiedź nas</h3>
+        <li><i class="fa-solid fa-thumbtack"></i> 41-506 Chorzów  <br>Podmiejska 34/U1</li>
+        <li><i class="fa-brands fa-facebook"></i>ubezpieczeniazz</li>
+
+      </ul>
+      </div>
+
+    </div>
+    
   </footer>
+  <div class="footer-design">
+    <div class="container">
+      <div>
+      <span>ZZ-Consulting</span>
+      <p>&copy; <span id="year"></span> Wszystkie prawa zastrzeżone </p>
+    </div>
+      <p>Created by <img src="/resources/AODesign.webp" alt="AODesign" width="20px"></p>
+  </div>
+</div>
   <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
