footer update,  increasing efficiency

--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -21,7 +21,7 @@
 
       <div class="choose-description container">
         <div class="left-site">
-          <img src="/resources/choose-us.jpg" alt="Choose-us" width="330px" />
+          <img src="/resources/1.avif" alt="Choose-us" height="290px" width="350px" />
         </div>
         <div class="right-site">
           <h2>Najlepsze ubezpieczenia w Chorzowie</h2>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="right-row">
                       <div>
-                        <img src="/resources/car-umbrella.webm" alt="OC/AC" />
+                        <img src="/resources/car-insurance.avif" width="200px" height="200px" alt="OC/AC" />
                       </div>
                     </div>
                   </div>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="right-row">
                       <div>
-                        <img src="/resources/life-insurance.webp" alt="Życie" />
+                        <img src="/resources/life-insurance.avif"width="200px" height="200px" alt="Życie" />
                       </div>
                     </div>
                   </div>
@@ -122,7 +122,7 @@
                       <div>
                         <img
                           src="/resources/school-insurance.webp"
-                          alt="Szkolne"
+                         width="200px" height="200px" alt="Szkolne"
                         />
                       </div>
                     </div>
@@ -149,8 +149,8 @@
                     <div class="right-row">
                       <div>
                         <img
-                          src="/resources/travel-insurance.webp"
-                          alt="Podróżne"
+                          src="/resources/travel-insurance.avif"
+                         width="200px" height="200px" alt="Podróżne"
                         />
                       </div>
                     </div>
@@ -181,7 +181,7 @@
                       <div>
                         <img
                           src="/resources/homeInsurance.webp"
-                          alt="Szkolne"
+                         width="200px" height="200px" alt="Mieszkania/domy"
                         />
                       </div>
                     </div>
@@ -212,7 +212,7 @@
                       <div>
                         <img
                           src="/resources/company-insurance.webp"
-                          alt="Szkolne"
+                         width="200px" height="200px" alt="Firmowe"
                         />
                       </div>
                     </div>
@@ -243,7 +243,7 @@
             </a>
           </div>
           <div class="car-right-site">
-            <img src="/resources/calculator.jpg" alt="calculator-photo" />
+            <img src="/resources/calculator.avif" alt="calculator-photo" />
           </div>
         </div>
       </div>
@@ -256,40 +256,40 @@
         </div>
         <div class="partners-list">
           <a href="/partnerzy/allianz/"
-            ><img src="/resources/partners/ALLIANZ_logo.png" alt="Allianz"
+            ><img src="/resources/partners/ALLIANZ_logo.png" height="140px" width="140px" alt="Allianz"
           /></a>
           <a href="/partnerzy/generali/"
-            ><img src="/resources/partners/GENERALI_logo.webp" alt="Generali"
+            ><img src="/resources/partners/GENERALI_logo.webp" height="140px" width="140px" alt="Generali"
           /></a>
           <a href="/partnerzy/hdi/"
-            ><img src="/resources/partners/HDI_logo.webp" alt="HDI"
+            ><img src="/resources/partners/HDI_logo.webp" height="140px" width="140px" alt="HDI"
           /></a>
           <a href="/partnerzy/interrisk/"
-            ><img src="/resources/partners/INTERRISK_logo.webp" alt="interrisk"
+            ><img src="/resources/partners/INTERRISK_logo.webp" height="140px" width="140px" alt="interrisk"
           /></a>
           <a href="/partnerzy/link4/"
-            ><img src="/resources/partners/LINK4_logo.webp" alt="link4"
+            ><img src="/resources/partners/LINK4_logo.webp" height="140px" width="140px" alt="link4"
           /></a>
           <a href="/partnerzy/mtu/"
-            ><img src="/resources/partners/MTU_logo.webp" alt="mtu"
+            ><img src="/resources/partners/MTU_logo.webp" height="140px" width="140px" alt="mtu"
           /></a>
           <a href="/partnerzy/proama/"
-            ><img src="/resources/partners/PROAMA_logo.webp" alt="proama"
+            ><img src="/resources/partners/PROAMA_logo.webp" height="140px" width="140px" alt="proama"
           /></a>
           <a href="/partnerzy/pzu/"
-            ><img src="/resources/partners/PZU_logo.webp" alt="pzu"
+            ><img src="/resources/partners/PZU_logo.webp" height="140px" width="140px" alt="pzu"
           /></a>
           <a href="/partnerzy/uniqa/"
-            ><img src="/resources/partners/UNIQA_logo.webp" alt="uniqa"
+            ><img src="/resources/partners/UNIQA_logo.webp" height="140px" width="140px" alt="uniqa"
           /></a>
           <a href="/partnerzy/warta/"
-            ><img src="/resources/partners/WARTA_logo.webp" alt="warta"
+            ><img src="/resources/partners/WARTA_logo.webp" height="140px" width="140px" alt="warta"
           /></a>
           <a href="/partnerzy/wiener/"
-            ><img src="/resources/partners/WIENER_logo.webp" alt="wiener"
+            ><img src="/resources/partners/WIENER_logo.webp" height="140px" width="140px" alt="wiener"
           /></a>
           <a href="/partnerzy/ergo/"
-            ><img src="/resources/partners/ERGO_logo.webp" alt="ergo"
+            ><img src="/resources/partners/ERGO_logo.webp" height="140px" width="140px" alt="ergo"
           /></a>
         </div>
       </div>
