--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -16,7 +16,7 @@
         <div class="logo-container">
           <div class="logo">
             <a href="/"
-              ><img src="/resources/logo.webp" alt="ZZ-Consulting Logo"
+              ><img src="/resources/logo.webp" alt="ZZ-Consulting Logo" width="140px" height="140px"
             /></a>
           </div>
 
