--- a/public/css/style.css
+++ b/public/css/style.css
@@ -435,8 +435,9 @@ nav ul li ul li:hover {
 
 /*----------------------------------------------------------------*/
 footer {
+  margin-top: -10rem ;
   color: #fff;
-  background: linear-gradient(-7deg, #06f 49.9%, transparent 50%), linear-gradient(7deg, #ff6c22 49.9%, #ffffff00 50%);}
+  background: linear-gradient(-5deg, #06f 49.7%, transparent 50%), linear-gradient(5deg, #3b5a91 49.7%, #ffffff00 50%);}
 
 .footer-container {
   margin: auto;
@@ -488,9 +489,10 @@ footer {
 }
 .footer-logo > a >img {
 filter: brightness(0%)invert(100%);
+height: auto;
 
 }
-.footer-column > ul > li > i {
+.footer-column > ul > li > i, .footer-column > ul > li > a > i{
   margin-right: 0.5rem;
   color: #ffe600;
 }
@@ -506,6 +508,12 @@ filter: brightness(0%)invert(100%);
 .footer-design > div > div >span {
   color: #ffe600;
   font-size: 0.8rem;
+}
+.footer-design > div > p > img {
+  margin-left: 0.4rem;
+}
+.footer-column > ul > li:first-child {
+  list-style-type: none;
 }
 /*----------------------------------------------------------------*/
 
@@ -1270,7 +1278,8 @@ h1 {
     margin-left: auto;
   }
   footer {
-    background: #06f;
+    margin-top: 0;
+    background: #005896;
   }
   .footer-container {
     padding: 1rem;
@@ -1405,10 +1414,11 @@ h1 {
   }
 
   footer {
-    background: #06f;
+    margin-top: 0;
+    background: #005896;
   }
   .footer-container {
-    padding-top: 3rem;
+    padding-top: 1rem;
   }
   .footer-logo > a >img {
     width: 80px;
@@ -1421,6 +1431,9 @@ h1 {
 }
 .footer-description, .footer-mobile {
   display: none;
+}
+.footer-design > .container {
+  margin: 0rem 2rem;
 }
   .about-container {
     display: block;
