--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,52 +1,22 @@
-<!-- <footer>
-    <div class="footer container">
-      <div class="footer-right">
-        <img src="/resources/logo.webp" alt="logo" />
-      </div>
-      <div class="footer-center-left">
-        <p>Ubezpieczenia ZZ-Consulting</p>
-        <p>41-506 Chorzów</p>
-        <p>ul.Podmiejska 34/U1</p>
-      </div>
-      <div class="footer-center-right">
-        <p>Godziny otwarcia:</p>
-        <p>Pn: 9:00 - 19:00</p>
-        <p>Wt-Pt: 9:00 - 17:00</p>
-      </div>
-    </div>
-    <div class="footer-last">
-    <div class="footer-copy container">
-      <span>&copy; <span id="year"></span>
-        <a href="/">ZZ-Consulting</a>.<br>Wszystkie prawa
-        zastrzeżone.</span>
-      <p>
-        Created by
-        <a href="#"
-          ><img src="/resources/AODesign.webp" alt="AODesign logotype"
-        /></a>
-      </p>
-    </div>
-  </div>
-  </footer> -->
   <footer>
     <div class="footer-container container">
       <div class="footer-column footer-wide">
           <div class="footer-logo">
-            <a href="/"><img src="/resources/logo.webp" alt="logo" width="120px"></a>
+            <a href="/"><img src="/resources/logo.webp" alt="logo" width="120px" height="120px"></a>
           </div>
           <div class="footer-description">
               <p>Renomowane ubezpieczenia<br> kompleksowe rozwiązania<br> indywidualne podejście</p>
           </div>
       </div>
       <div class="footer-column">
-        <ul><h3>Linki</h3>
+        <ul><li><h3>Linki</h3></li>
           <li><a href="/">Strona główna</a></li>
           <li><a href="/druki">Druki</a></li>
           <li><a href="/partnerzy">Partnerzy</a></li>
         </ul>
       </div>
       <div class="footer-column footer-mobile">
-        <ul><h3>Narzędzia</h3>
+        <ul><li><h3>Narzędzia</h3></li>
           <li><a href="/narzedzia/wypowiedzenie-oc">Wypowiedzenie OC</a></li>
           <li><a href="/narzedzia/powiadomienie-o-zbyciu">Zbycie pojazdu</a></li>
           <li><a href="/narzedzia/powiadomienie-o-wyrejestrowaniu">Wyrejestrowanie pojazdu</a></li>
@@ -54,15 +24,15 @@
         </ul>
       </div>
       <div class="footer-column">
-        <ul><h3>O nas</h3>
+        <ul><li><h3>O nas</h3></li>
           <li><a href="/o-nas">Poznaj nas</a></li>
           <li><a href="/kontakt">Kontakt</a></li>
         </ul>
       </div>
       <div class="footer-column footer-contact footer-mobile">
-        <ul><h3>Odwiedź nas</h3>
+        <ul><li><h3>Odwiedź nas</h3></li>
         <li><i class="fa-solid fa-thumbtack"></i> 41-506 Chorzów  <br>Podmiejska 34/U1</li>
-        <li><i class="fa-brands fa-facebook"></i>ubezpieczeniazz</li>
+        <li> <a href="https://www.facebook.com/ubezpieczeniazz/" target="_blank" ><i class="fa-brands fa-facebook"></i>ubezpieczeniazz</a></li>
 
       </ul>
       </div>
@@ -76,7 +46,10 @@
       <span>ZZ-Consulting</span>
       <p>&copy; <span id="year"></span> Wszystkie prawa zastrzeżone </p>
     </div>
-      <p>Created by <img src="/resources/AODesign.webp" alt="AODesign" width="20px"></p>
+      <p>Created by <a href="#"><img src="/resources/AODesign.webp" alt="AODesign" width="25px" height="12px"></a></p>
   </div>
 </div>
   <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
+  <link rel="stylesheet" href="/fontawesome/css/fontawesome.min.css">
+  <link rel="stylesheet" href="/fontawesome/css/solid.min.css">
+  <link rel="stylesheet" href="/fontawesome/css/brands.min.css">
