--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -23,11 +23,11 @@
           <div class="mobile-menu">
             <ul class="menu">
               <li><a class="menuItem" href="/">Strona Główna</a></li>
-              <li><a class="menuItem" href="/about">O Nas</a></li>
-              <li><a class="menuItem" href="/forms">Druki</a></li>
+              <li><a class="menuItem" href="/o-nas">O Nas</a></li>
+              <li><a class="menuItem" href="/druki">Druki</a></li>
               <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
               <li><a class="menuItem" href="/narzedzia">Narzędzia</a></li>
-              <li><a class="menuItem" href="/contact">Kontakt</a></li>
+              <li><a class="menuItem" href="/kontakt">Kontakt</a></li>
             </ul>
             <div class="hamburger">
               <i class="fa-solid fa-bars menuIcon"> </i>
