--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -243,7 +243,7 @@
             </a>
           </div>
           <div class="car-right-site">
-            <img src="/resources/calculator.avif" alt="calculator-photo" />
+            <img src="/resources/calculator.avif" alt="calculator-photo" width="250px" height="250px"/>
           </div>
         </div>
       </div>
