--- a/public/css/style.css
+++ b/public/css/style.css
@@ -515,6 +515,9 @@ height: auto;
 .footer-column > ul > li:first-child {
   list-style-type: none;
 }
+.footer-column:last-child {
+  display: none;
+}
 /*----------------------------------------------------------------*/
 
 /* Contact page */
@@ -898,6 +901,7 @@ h1 {
 }
 .car-right-site img {
   width: 100%;
+  height: auto;
   border-radius: 25%;
 }
 .tools-nav {
@@ -1380,6 +1384,10 @@ h1 {
   #offer {
     max-width: 100vw;
   }
+  .choose-description > .left-site > img {
+    width: 250px;
+    height: auto;
+  }
   .offer-box {
     width: 100%;
     padding: 0rem;
@@ -1418,19 +1426,41 @@ h1 {
     background: #005896;
   }
   .footer-container {
+    padding: 0;
     padding-top: 1rem;
   }
   .footer-logo > a >img {
     width: 80px;
   }
   .footer-column {
-    width: 30%;
+    display: none;
+    width: 50%;
   }
-.footer-column > ul > li > a >span {
-  display: none;
-}
+  .footer-column:first-child{
+    display: block;
+  }
+  .footer-column > ul > li { 
+  padding-top: 0.5rem;
+  }
+  .footer-column > ul > li > a {
+    font-size: 1.1rem;
+  }
 .footer-description, .footer-mobile {
   display: none;
+}
+.footer-column:last-child {
+  display: block;
+  text-align: center;
+}
+.footer-column:last-child > a > i {
+  margin-top: 0.5rem;
+  font-size: 2.5rem;
+  color: #ffe600;
+}
+.footer-column:last-child > a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5rem;
 }
 .footer-design > .container {
   margin: 0rem 2rem;
@@ -1605,5 +1635,6 @@ h1 {
   }
   .car-right-site > img {
     width: 250px;
+    height: auto;
   }
 }
