--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -33,10 +33,12 @@
         <ul><li><h3>Odwiedź nas</h3></li>
         <li><i class="fa-solid fa-thumbtack"></i> 41-506 Chorzów  <br>Podmiejska 34/U1</li>
         <li> <a href="https://www.facebook.com/ubezpieczeniazz/" target="_blank" ><i class="fa-brands fa-facebook"></i>ubezpieczeniazz</a></li>
-
       </ul>
       </div>
-
+      <div class="footer-column">
+        <p>Bądź na bieżąco!</p>
+      <a href="https://www.facebook.com/ubezpieczeniazz/" target="_blank" ><i class="fa-brands fa-facebook"></i> ubezpieczeniazz</a>    
+    </div>
     </div>
     
   </footer>
