--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,6 +3,8 @@
 <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">  </head> -->
 <link rel="stylesheet" href="/css/fonts.css">
 <link rel="stylesheet" href="/css/style.css" />
+<link rel="preload" href="/resources/header.avif" as="image">
+<link rel="preload" href="/resources/partners-background.webp" as="image">
 <link
   rel="apple-touch-icon"
   sizes="180x180"
