--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -13,6 +13,8 @@
           <li><a href="/">Strona główna</a></li>
           <li><a href="/druki">Druki</a></li>
           <li><a href="/partnerzy">Partnerzy</a></li>
+          <li><a href="/faq">FAQ</a></li>
+          <li><a href="/faq/slownik-pojec">Słownik pojęć</a></li>
         </ul>
       </div>
       <div class="footer-column footer-mobile">
