--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -28,6 +28,7 @@
               <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
               <li><a class="menuItem" href="/narzedzia">Narzędzia</a></li>
               <li><a class="menuItem" href="/kontakt">Kontakt</a></li>
+              <li><a class="menuItem" href="/faq">FAQ</a></li>
             </ul>
             <div class="hamburger">
               <i class="fa-solid fa-bars menuIcon"> </i>
@@ -53,5 +54,7 @@
           </ul>
         </li>
         <li><a href="/kontakt"<% if (title === 'Kontakt') { %>class="nav-active" <% } %>>Kontakt</a></li>
+        <li><a href="/faq"<% if (title === 'Faq') { %>class="nav-active" <% } %>>FAQ</a></li>
+
       </ul>
     </nav>
